--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,3 +4,4 @@ test:
     - apt-get -y update
     - apt-get -y install emacs
     - emacs -batch --eval="(message (number-to-string (+ 1 2)))"
+    - emacs -batch -l ./init.el
