--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,5 +4,5 @@ test:
     - apt-get -y update
     - apt-get -y install emacs
     - emacs -batch --eval="(message (number-to-string (+ 1 2)))"
-    - mkdir ./emacs.d/
+    - mkdir /root/.emacs.d/
     - emacs -batch -l ./init.el
