--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
+.cache/
 elpa/
 temps/
 url/
-var/
-eln-cache/
-
 emacs.el
-package-quickstart.el
+emacs_backtrace.txt
+custom--ignored.el
+ido.last
+network-security.data
+projectile-bookmarks.eld
+projectile.cache
+recentf
+semanticdb/
+server/
+tramp
+var/
 
+emacs.tex
+custom.el
+transient/history.el
+.lsp-session*
 *.elc
-
-
+package-quickstart.el
+eln-cache/
