--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "config/helm-tree-sitter"]
 	path = config/helm-tree-sitter
-	url = https://gitlab.com/giedriusj1/helm-tree-sitter
+	url = git@gitlab.com:giedriusj1/helm-tree-sitter.git
