--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "config/helm-tree-sitter"]
 	path = config/helm-tree-sitter
-	url = git@gitlab.com:giedriusj1/helm-tree-sitter.git
+	url = git@github.com-personal:Giedriusj1/helm-tree-sitter.git
